Corrected gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.idea/modules.xml
-.idea/misc.xml
-.idea/vcs.xml
-.idea/workspace.xml
-.idea/inspectionProfiles/
-.idea/mathematical_moster_pyter.iml
+/.idea/modules.xml
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/workspace.xml
+/.idea/inspectionProfiles/
+/.idea/mathematical_monster_pyter.iml
 **/__pycache__/
